Fix background gradient on mobile

--- a/app/css/frontend.scss
+++ b/app/css/frontend.scss
@@ -19,7 +19,7 @@
 }
 
 body {
-    background: linear-gradient(#fef400, #e77817) fixed;
+    background: linear-gradient(#fef400, #e77817);
 }
 .page-header {
     /* no line below header */
